Added Hi Justin

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,11 @@
 .idea/workspace.xml
 *.iml
 *.xml
+Project2/Project2/Project2.vcxproj.user
+Project2/Project2/Project2.vcxproj.filters
+Project2/Project2/Project2.vcxproj
+Project2/Project2.sln
+Project2/.vs/Project2/v16/Browse.VC.opendb
+Project2/.vs/Project2/v16/Browse.VC.db
+.vs/slnx.sqlite
+.vs/ProjectSettings.json
