Picture stuff might have messed up mine

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ Project2/.vs/Project2/v16/Browse.VC.opendb
 Project2/.vs/Project2/v16/Browse.VC.db
 .vs/slnx.sqlite
 .vs/ProjectSettings.json
+images/kai.png
